--- a/export.yml
+++ b/export.yml
@@ -1,1 +1,12 @@
-
+- name: Playbook que executa o export das regras
+  hosts: NOME_DO_CLIENTE
+  gather_facts: no
+  tasks:
+  #- name: "Entrando no diretório"
+  #  shell: cd 
+ # - name: "Definindo as variáveis necessárias"
+ #   shell: regra2= "Adição de grupo privilegiado" | sed -e "s/ /_/g"
+  - name: "Exportando a regra"
+    shell: cd /opt/rules/export && /opt/qradar/bin/contentManagement.pl -a export --content-type 3 --regex "^NOME_DA_REGRA*" | tee new_rule
+  - name: "Extraindo os arquivos"
+    shell: cd /opt/rules/export && unzip `grep SUCCESS new_rule | cut -d"/" -f5`
