--- a/export.yml
+++ b/export.yml
@@ -6,8 +6,10 @@
     shell: cd /opt/rules/export && rm -rf * && /opt/qradar/bin/contentManagement.pl -a export --content-type 3 --regex "^NOME_DA_REGRA*" | tee new_rule
   - name: "Extraindo os arquivos"
     shell: cd /opt/rules/export && unzip `grep SUCCESS new_rule | cut -d"/" -f5`
+  #- name: "Renomeando o arquivo "
+  #  shell: mv `grep SUCCESS new_rule | cut -d"/" -f5` "NOME_DA_REGRA*".xml
   - name: "Excluindo arquivos não utilizados"
     shell: cd /opt/rules/export && rm -rf *.zip && rm -rf new_rule
   - name: "Renomeando o arquivo "
-    shell: mv *.xml "^NOME_DA_REGRA*".xml
+    shell: cp -p *.xml "NOME_DA_REGRA*".xml
 ###
