--- a/export.yml
+++ b/export.yml
@@ -6,6 +6,10 @@
     shell: cd /opt/rules/export && rm -rf * && /opt/qradar/bin/contentManagement.pl -a export --content-type 3 --regex "^NOME_DA_REGRA*" | tee new_rule
   - name: "Extraindo os arquivos"
     shell: cd /opt/rules/export && unzip `grep SUCCESS new_rule | cut -d"/" -f5`
+  - name: definindo a variavel da regra
+    shell: rule_name=`grep SUCCESS new_rule | cut -d"/" -f5 | sed -e "s/.zip/.xml/g"`
+  - name: definindo o nome do arquivo
+    shell: mv $rule_name "NOME_DA_REGRA".xml
   #- name: "Renomeando o arquivo "
   #  shell: mv `grep SUCCESS new_rule | cut -d"/" -f5 | sed -e "s/.zip/.xml/g"` "NOME_DA_REGRA*".xml
   #  command: mv /opt/rules/export/`grep SUCCESS new_rule | cut -d"/" -f5 | sed -e "s/.zip/.xml/g"` "NOME_DA_REGRA*".xml` /opt/rules/export/"NOME_DA_REGRA".xml
